Fix global CORS for Netlify